# peitho

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  demo-preview-cleanup.yml  deploy-demo.yml  release.yml
bindings/: AspectRatio.ts  Manifest.ts  ManifestImage.ts  ManifestSection.ts  ManifestSlide.ts  ManifestSlideText.ts  MeasuredBox.ts  MeasuredBoxStyle.ts  MeasuredDeck.ts  MeasuredImage.ts  MeasuredParagraph.ts  MeasuredRect.ts  MeasuredRun.ts  MeasuredSlide.ts  Notes.ts  PageNumberFormat.ts  PresentConfig.ts  RehearsalBaseline.ts  RehearsalRecord.ts  RehearsalSection.ts  RehearsalSnapshot.ts
crates/peitho/: Cargo.toml
crates/peitho-core/: Cargo.toml
crates/peitho-core/assets/katex/: PROVENANCE.md
crates/peitho-core/src/: check.rs  code_images.rs  domain.rs  error.rs  highlight.rs  include.rs  json.rs  layout.rs  lib.rs  lint_measure.js  manifest.rs  mapping.rs  math.rs  notes.rs  parser.rs  pdf_flatten.js  phase.rs  plain.rs  pptx.rs  present_config.rs  rehearsal.rs  render.rs  template.rs  theme.rs
crates/peitho-core/tests/: code_images.rs  rehearsal_contract.rs
crates/peitho/src/: asset_resolution.rs  browser.rs  displays.rs  doctor.rs  lib.rs  lint.rs  main.rs  new_cmd.rs  qr.rs  remote_url.rs  server.rs
crates/peitho/templates/new/: cover.css  cover.html  dark-cover.css  dark-two-column.css  dark.css  deck-cover.md  deck-default.md  deck-split.md  gitignore  two-column.css  two-column.html
crates/peitho/tests/: build.rs  cli_help.rs  export_pdf.rs  export_pptx.rs  lint.rs  present.rs  publish.rs
crates/peitho/tests/util/: mod.rs
demo/: index.html
docs/: PEITHO_KICKOFF.md
docs/plans/: 2026-07-02-milestone-1-vertical-slice.md  2026-07-02-milestone-2-multi-slide.md  2026-07-02-milestone-3-present-shell.md  2026-07-02-milestone-4-present-command.md  2026-07-02-milestone-5-presenter-view.md  2026-07-02-milestone-6-publish-watch.md  2026-07-03-embed-default-assets.md  2026-07-03-embed-present-shell.md  2026-07-03-example-gallery.md  2026-07-03-layouts-css-dirs.md  2026-07-03-milestone-10-cli-window-placement.md  2026-07-03-milestone-7-presentation-canvas.md  2026-07-03-milestone-8-display-management.md  2026-07-03-milestone-9-display-placement-fix.md  2026-07-03-multi-layout-dispatch.md  2026-07-03-presenter-windowed-mode.md  2026-07-03-time-tracking.md  2026-07-03-zero-config-conventions.md  2026-07-04-binary-release.md  2026-07-04-display-swap.md  2026-07-04-feature-tour-example.md  2026-07-04-presenter-agenda.md  2026-07-04-presenter-redesign-followups.md  2026-07-04-presenter-redesign.md  2026-07-04-speaker-notes.md  2026-07-04-time-tracker-scale-labels.md  2026-07-05-configurable-aspect-ratio.md  2026-07-05-explicit-slot-syntax.md  2026-07-05-frontmatter-layouts-css.md  2026-07-05-manifest-slide-text.md  2026-07-05-markdown-images.md  2026-07-05-pdf-export.md  2026-07-05-syntax-help-drift.md  2026-07-05-timer-urgency.md  2026-07-05-url-deep-link.md  2026-07-05-user-syntaxes.md  2026-07-06-pdf-flatten-linux-decode-hang.md  2026-07-06-pdf-gradient-flatten.md  2026-07-06-pdf-shadow-flatten.md  2026-07-06-pptx-export.md  (+47 more)
docs/prs/: 2026-07-05-images.md
docs/specs/: 2026-07-03-time-tracking-design.md  2026-07-04-presenter-agenda-design.md  2026-07-05-explicit-slot-syntax.md  2026-07-08-watch-error-resilience-design.md  2026-07-09-docs-site-design.md
examples/: deck.md
examples/aspect-ratio-4-3/: deck.md
examples/code-images/: deck.md
examples/code-images/css/: base.css  overrides.css
examples/code-images/layouts/: diagram.html  source.html
examples/code-walkthrough/: base.css  deck.md  layout.html
examples/code-walkthrough/css/: base.css  overrides.css
examples/custom-fonts/: deck.md
examples/custom-fonts/css/: overrides.css  theme.css
examples/custom-syntax/: deck.md
examples/custom-syntax/syntaxes/: toml.sublime-syntax
examples/draft-skip/: README.md  deck.md
examples/feature-tour/: deck.md
examples/feature-tour/css/: base.css  overrides.css
examples/feature-tour/layouts/: agenda.html  code-demo.html  cover.html  topic.html
examples/footnotes/: deck.md
examples/footnotes/css/: base.css  overrides.css
examples/footnotes/layouts/: literal-flow.html  title-body-code.html
examples/image-showcase/: deck.md
examples/image-showcase/css/: base.css
examples/image-showcase/layouts/: visual.html
examples/keynote/: base.css  cover.html  deck.md  overrides.css  template.html
examples/keynote/css/: base.css
examples/layout-pin/: deck.md
examples/lightning-talk/: base.css  deck.md  template.html
examples/math/: deck.md
examples/pdf-export/: README.md  deck.md
examples/peitho-tour/: deck.md
examples/two-column/: deck.md
scripts/: render-og-brand.mjs  render-og-cards.mjs  screenshot-decks.mjs  take-screenshots.sh
site/: config.toml
site/content/: _index.md
site/static/: _redirects  site.css
site/templates/: 404.html  base.html  docs.html  example-page.html  examples.html  guide-page.html  guide.html  index.html
templates/: title-body-code.html
themes/: base.css  overrides.css
(+38 files in other folders)
