[workspace]
members = ["crates/peitho-core", "crates/peitho"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.8.0"

[workspace.dependencies]
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
assert_cmd = "2"
clap = { version = "4", features = ["derive"] }
html-escape = "0.2"
lol_html = "2"
miette = { version = "7", features = ["fancy"] }
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
predicates = "3"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_norway = "0.9"
serde_json = "1"
tempfile = "3"
tiny_http = "0.12.0"
ts-rs = { version = "12.0.1", default-features = true }
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
