[workspace]
members = ["crates/peitho-core", "crates/peitho"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "1.11.0"

[workspace.dependencies]
base64 = "0.22"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
assert_cmd = "2"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
html-escape = "0.2"
if-addrs = "0.15.0"
katex-rs = "=0.2.4"
lol_html = "2"
merman = { version = "0.7", features = ["render"] }
miette = { version = "7", features = ["fancy"] }
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
predicates = "3"
pulldown-cmark = "0.13"
qrcodegen = "1.8"
serde = { version = "1", features = ["derive"] }
serde_norway = "0.9"
serde_json = "1"
sha2 = "0.11.0"
shlex = "1.3"
tempfile = "3"
tiny_http = "0.12.0"
ts-rs = { version = "12.0.1", default-features = true }
