[package]
name = "peitho-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
ts-bindings = ["dep:ts-rs"]

[dependencies]
html-escape.workspace = true
lol_html.workspace = true
pulldown-cmark.workspace = true
serde.workspace = true
serde_json.workspace = true
ts-rs = { workspace = true, optional = true }

[dev-dependencies]
ts-rs.workspace = true
