[package]
name = "peitho"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "peitho"
path = "src/main.rs"

[dependencies]
clap.workspace = true
miette.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
peitho-core = { path = "../peitho-core" }
serde.workspace = true
serde_json.workspace = true
tiny_http.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
