[package]
name = "peitho"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "peitho"
path = "src/main.rs"

[dependencies]
base64.workspace = true
clap.workspace = true
clap_complete.workspace = true
if-addrs.workspace = true
miette.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
peitho-core = { path = "../peitho-core" }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.11.0"
tempfile.workspace = true
tiny_http.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
